# smoldb

./: .gitignore  Cargo.toml  LICENSE  README.md
benches/: server_bench.rs  storage_bench.rs
src/: client.rs  common.rs  error.rs  kv_store.rs  lib.rs  main.rs  server.rs
src/client/: client.rs  mod.rs  pool.rs
src/net/: mod.rs  net.rs
src/server/: mod.rs  server.rs
src/server/storage/: bitcask.rs  mod.rs  sled.rs
src/storage/: bitcask.rs  error.rs  mod.rs  sled.rs  storage.rs
src/store/: error.rs  kv_store.rs  mod.rs
src/thread_pool/: mod.rs  naive.rs  rayon.rs  shared_queue.rs
tests/: cli.rs  tests.rs
