[package]
name = "smoldb"
version = "0.1.0"
edition = "2021"
authors = ["Evan Fleming"]
license = "MIT"
description = "A naive distributed sql database written in Rust entirely for learning purposes."
repository = "https://github.com/oldmanfleming/smoldb"

[dependencies]
bincode = "1.3.3"
byteorder = "1.5.0"
clap = { version = "4.4.18", features = ["derive"] }
crc = "3.0.1"
serde = { version = "1.0.197", features = ["derive"] }
sled = "0.34.7"
thiserror = "1.0.56"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[dev-dependencies]
assert_cmd = "2.0.13"
predicates = "3.1.0"
tempfile = "3.10.0"
walkdir = "2.4.0"
